--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
       margin-left: auto;
       margin-right: auto;
     }
-    /* @media screen and (max-width: 480px) {
-      65 12
-      75 25
-      height: 40%
-      font: 12em/1Arial
-    } */
+    @media screen and (max-width: 480px) {
+       body{
+         overflow:hiden;
+       }
+	}
+      
     @media only screen and (max-height: 700px) {
       h2 {
         font-size: 1.5em;
@@ -173,6 +173,9 @@
    color: white;
    text-align: center;
 }
+	body{
+         overflow:hiden;
+       }
  
 </style>
 </head>
