--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
          #txt-animation {
          height: 22%;
          }
-         .text-copy,
+/*          .text-copy,
          .text-copy:nth-child(1) ,
          .text-copy:nth-child(2) ,
          .text-copy:nth-child(3) ,
          .text-copy:nth-child(4) ,
          .text-copy:nth-child(5) {
          stroke: Black !important;
-         }
+         } */
        
          } 
          @media only screen and (max-height: 700px) {
